fix(Modal): [BLA-SCOUT] Increase the modal z-index to have a higher value

--- a/packages/core-components/src/components/modal/modal.scss
+++ b/packages/core-components/src/components/modal/modal.scss
@@ -14,7 +14,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 99999;
     display: none;
     position: fixed;
     background-color: var(--b2b-color-background-overlay-transparent-80);
